// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectDropdown should render 1`] = `
<div>
  <div
    class="relative w-full"
  >
    <input
      class="sc-AxirZ cNbglv overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 text-theme-text transition-colors duration-200 px-4 py-3 sr-only"
      data-testid="select-list__input"
      readonly=""
      type="text"
      value=""
    />
    <div
      class="relative w-full"
    >
      <div
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-owns="downshift-1-menu"
        role="combobox"
      >
        <label
          for="downshift-0-input"
          id="downshift-1-label"
        />
        <div
          class="sc-AxgMl cZbWSE"
          data-testid="SelectDropdownInput"
        >
          <input
            aria-autocomplete="list"
            aria-controls="downshift-1-menu"
            aria-labelledby="downshift-1-label"
            autocomplete="off"
            class="sc-AxirZ cNbglv overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 text-theme-text transition-colors duration-200 px-4 py-3 cursor-default"
            data-testid="SelectDropdownInput__input"
            id="downshift-0-input"
            placeholder="Select option"
            value=""
          />
        </div>
        <ul
          aria-labelledby="downshift-1-label"
          class="sc-fzoLsD loBQGJ"
          id="downshift-1-menu"
          role="listbox"
        />
      </div>
      <div
        class="sc-AxiKw sc-AxhUy QmuzF w-10 pointer-events-none text-theme-neutral"
      >
        <div
          class="sc-AxjAm bccTmi"
          height="5"
          width="7"
        >
          <svg>
            caret-down.svg
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SelectDropdown should render disabled 1`] = `
<div>
  <div
    class="relative w-full"
  >
    <input
      class="sc-AxirZ cNbglv overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 text-theme-text transition-colors duration-200 px-4 py-3 sr-only"
      data-testid="select-list__input"
      readonly=""
      type="text"
      value=""
    />
    <div
      class="relative w-full"
    >
      <div
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-owns="downshift-9-menu"
        role="combobox"
      >
        <label
          for="downshift-8-input"
          id="downshift-9-label"
        />
        <div
          class="sc-AxgMl cZbWSE"
          data-testid="SelectDropdownInput"
        >
          <input
            aria-autocomplete="list"
            aria-controls="downshift-9-menu"
            aria-labelledby="downshift-9-label"
            autocomplete="off"
            class="sc-AxirZ cNbglv overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 text-theme-text transition-colors duration-200 px-4 py-3 cursor-default"
            data-testid="SelectDropdownInput__input"
            disabled=""
            id="downshift-8-input"
            placeholder="Select option"
            value=""
          />
        </div>
        <ul
          aria-labelledby="downshift-9-label"
          class="sc-fzoLsD loBQGJ"
          id="downshift-9-menu"
          role="listbox"
        />
      </div>
      <div
        class="sc-AxiKw sc-AxhUy QmuzF w-10 pointer-events-none text-theme-neutral"
      >
        <div
          class="sc-AxjAm bccTmi"
          height="5"
          width="7"
        >
          <svg>
            caret-down.svg
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SelectDropdown should render invalid 1`] = `
<div>
  <div
    class="relative w-full"
  >
    <input
      aria-invalid="true"
      class="sc-AxirZ cNbglv overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 text-theme-text transition-colors duration-200 px-4 py-3 sr-only"
      data-testid="select-list__input"
      readonly=""
      type="text"
      value=""
    />
    <div
      class="relative w-full"
    >
      <div
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-owns="downshift-5-menu"
        role="combobox"
      >
        <label
          for="downshift-4-input"
          id="downshift-5-label"
        />
        <div
          class="sc-AxgMl cZbWSE"
          data-testid="SelectDropdownInput"
        >
          <input
            aria-autocomplete="list"
            aria-controls="downshift-5-menu"
            aria-labelledby="downshift-5-label"
            autocomplete="off"
            class="sc-AxirZ cNbglv overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 text-theme-text transition-colors duration-200 px-4 py-3 cursor-default"
            data-testid="SelectDropdownInput__input"
            id="downshift-4-input"
            placeholder="Select option"
            value=""
          />
        </div>
        <ul
          aria-labelledby="downshift-5-label"
          class="sc-fzoLsD loBQGJ"
          id="downshift-5-menu"
          role="listbox"
        />
      </div>
      <div
        class="sc-AxiKw sc-AxhUy QmuzF w-10 pointer-events-none text-theme-neutral"
      >
        <div
          class="sc-AxjAm bccTmi"
          height="5"
          width="7"
        >
          <svg>
            caret-down.svg
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SelectDropdown should render with empty options 1`] = `
<div>
  <div
    class="relative w-full"
  >
    <input
      class="sc-AxirZ cNbglv overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 text-theme-text transition-colors duration-200 px-4 py-3 sr-only"
      data-testid="select-list__input"
      readonly=""
      type="text"
      value=""
    />
    <div
      class="relative w-full"
    >
      <div
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-owns="downshift-23-menu"
        role="combobox"
      >
        <label
          for="downshift-22-input"
          id="downshift-23-label"
        />
        <div
          class="sc-AxgMl cZbWSE"
          data-testid="SelectDropdownInput"
        >
          <input
            aria-autocomplete="list"
            aria-controls="downshift-23-menu"
            aria-labelledby="downshift-23-label"
            autocomplete="off"
            class="sc-AxirZ cNbglv overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 text-theme-text transition-colors duration-200 px-4 py-3 cursor-default"
            data-testid="SelectDropdownInput__input"
            id="downshift-22-input"
            placeholder="Select option"
            value=""
          />
        </div>
        <ul
          aria-labelledby="downshift-23-label"
          class="sc-fzoLsD loBQGJ"
          id="downshift-23-menu"
          role="listbox"
        />
      </div>
      <div
        class="sc-AxiKw sc-AxhUy QmuzF w-10 pointer-events-none text-theme-neutral"
      >
        <div
          class="sc-AxjAm bccTmi"
          height="5"
          width="7"
        >
          <svg>
            caret-down.svg
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SelectDropdown should render with initial default value 1`] = `
<div>
  <div
    class="relative w-full"
  >
    <input
      class="sc-AxirZ cNbglv overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 text-theme-text transition-colors duration-200 px-4 py-3 sr-only"
      data-testid="select-list__input"
      readonly=""
      type="text"
      value="3"
    />
    <div
      class="relative w-full"
    >
      <div
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-owns="downshift-13-menu"
        role="combobox"
      >
        <label
          for="downshift-12-input"
          id="downshift-13-label"
        />
        <div
          class="sc-AxgMl cZbWSE"
          data-testid="SelectDropdownInput"
        >
          <span
            class="sc-AxiKw isrMEQ py-3 pl-4 font-normal border border-transparent opacity-50 pointer-events-none"
            data-testid="SelectDropdownInput__typeahead"
          >
            Option 3
          </span>
          <input
            aria-autocomplete="list"
            aria-controls="downshift-13-menu"
            aria-labelledby="downshift-13-label"
            autocomplete="off"
            class="sc-AxirZ cNbglv overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 text-theme-text transition-colors duration-200 px-4 py-3 cursor-default"
            data-testid="SelectDropdownInput__input"
            id="downshift-12-input"
            placeholder="Select option"
            value="Option 3"
          />
        </div>
        <ul
          aria-labelledby="downshift-13-label"
          class="sc-fzoLsD loBQGJ"
          id="downshift-13-menu"
          role="listbox"
        />
      </div>
      <div
        class="sc-AxiKw sc-AxhUy QmuzF w-10 pointer-events-none text-theme-neutral"
      >
        <div
          class="sc-AxjAm bccTmi"
          height="5"
          width="7"
        >
          <svg>
            caret-down.svg
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SelectDropdown should render with options values as numbers 1`] = `
<div>
  <div
    class="relative w-full"
  >
    <input
      class="sc-AxirZ cNbglv overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 text-theme-text transition-colors duration-200 px-4 py-3 sr-only"
      data-testid="select-list__input"
      readonly=""
      type="text"
      value=""
    />
    <div
      class="relative w-full"
    >
      <div
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-owns="downshift-27-menu"
        role="combobox"
      >
        <label
          for="downshift-26-input"
          id="downshift-27-label"
        />
        <div
          class="sc-AxgMl cZbWSE"
          data-testid="SelectDropdownInput"
        >
          <input
            aria-autocomplete="list"
            aria-controls="downshift-27-menu"
            aria-labelledby="downshift-27-label"
            autocomplete="off"
            class="sc-AxirZ cNbglv overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 text-theme-text transition-colors duration-200 px-4 py-3 cursor-default"
            data-testid="SelectDropdownInput__input"
            id="downshift-26-input"
            placeholder="Select option"
            value=""
          />
        </div>
        <ul
          aria-labelledby="downshift-27-label"
          class="sc-fzoLsD loBQGJ"
          id="downshift-27-menu"
          role="listbox"
        />
      </div>
      <div
        class="sc-AxiKw sc-AxhUy QmuzF w-10 pointer-events-none text-theme-neutral"
      >
        <div
          class="sc-AxjAm bccTmi"
          height="5"
          width="7"
        >
          <svg>
            caret-down.svg
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SelectDropdown should render with wrong default value 1`] = `
<div>
  <div
    class="relative w-full"
  >
    <input
      class="sc-AxirZ cNbglv overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 text-theme-text transition-colors duration-200 px-4 py-3 sr-only"
      data-testid="select-list__input"
      readonly=""
      type="text"
      value=""
    />
    <div
      class="relative w-full"
    >
      <div
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-owns="downshift-19-menu"
        role="combobox"
      >
        <label
          for="downshift-18-input"
          id="downshift-19-label"
        />
        <div
          class="sc-AxgMl cZbWSE"
          data-testid="SelectDropdownInput"
        >
          <input
            aria-autocomplete="list"
            aria-controls="downshift-19-menu"
            aria-labelledby="downshift-19-label"
            autocomplete="off"
            class="sc-AxirZ cNbglv overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 text-theme-text transition-colors duration-200 px-4 py-3 cursor-default"
            data-testid="SelectDropdownInput__input"
            id="downshift-18-input"
            placeholder="Select option"
            value=""
          />
        </div>
        <ul
          aria-labelledby="downshift-19-label"
          class="sc-fzoLsD loBQGJ"
          id="downshift-19-menu"
          role="listbox"
        />
      </div>
      <div
        class="sc-AxiKw sc-AxhUy QmuzF w-10 pointer-events-none text-theme-neutral"
      >
        <div
          class="sc-AxjAm bccTmi"
          height="5"
          width="7"
        >
          <svg>
            caret-down.svg
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;
